@@ -562,6 +562,10 @@ BEGIN
     IDS_VIEWCONTEXTMENU_USETHISBLOCK "Use this text block"
     IDS_VIEWCONTEXTMENU_USETHEIRBLOCK "Use text block from ""theirs"""
     IDS_VIEWCONTEXTMENU_USEYOURBLOCK "Use text block from ""yours"""
+    IDS_VIEWCONTEXTMENU_USETHEIRANDYOURBLOCK 
+                            "Use text block from ""theirs"" before ""yours"""
+    IDS_VIEWCONTEXTMENU_USEYOURANDTHEIRBLOCK 
+                            "Use text block from ""yours"" before ""theirs"""
 END
 
 STRINGTABLE 
