@@ -62,6 +62,8 @@ void CBottomView::OnContextMenu(CPoint point, int nLine)
 	{
 #define ID_USETHEIRBLOCK 1
 #define ID_USEYOURBLOCK 2
+#define ID_USETHEIRANDYOURBLOCK 3
+#define ID_USEYOURANDTHEIRBLOCK 4
 		UINT uEnabled = MF_ENABLED;
 		if ((m_nSelBlockStart == -1)||(m_nSelBlockEnd == -1))
 			uEnabled |= MF_DISABLED | MF_GRAYED;
@@ -70,6 +72,10 @@ void CBottomView::OnContextMenu(CPoint point, int nLine)
 		popup.AppendMenu(MF_STRING | uEnabled, ID_USETHEIRBLOCK, temp);
 		temp.LoadString(IDS_VIEWCONTEXTMENU_USEYOURBLOCK);
 		popup.AppendMenu(MF_STRING | uEnabled, ID_USEYOURBLOCK, temp);
+		temp.LoadString(IDS_VIEWCONTEXTMENU_USEYOURANDTHEIRBLOCK);
+		popup.AppendMenu(MF_STRING | uEnabled, ID_USEYOURANDTHEIRBLOCK, temp);
+		temp.LoadString(IDS_VIEWCONTEXTMENU_USETHEIRANDYOURBLOCK);
+		popup.AppendMenu(MF_STRING | uEnabled, ID_USETHEIRANDYOURBLOCK, temp);
 
 		int cmd = popup.TrackPopupMenu(TPM_RETURNCMD | TPM_LEFTALIGN | TPM_NONOTIFY, point.x, point.y, this, 0);
 		switch (cmd)
@@ -80,8 +86,8 @@ void CBottomView::OnContextMenu(CPoint point, int nLine)
 				{
 					m_arDiffLines->SetAt(i, m_pwndLeft->m_arDiffLines->GetAt(i));
 					m_arLineStates->SetAt(i, m_pwndLeft->m_arLineStates->GetAt(i));
-					SetModified();
 				} // for (int i=m_nSelBlockStart; i<=m_nSelBlockEnd; i++) 
+				SetModified();
 			} 
 			break;
 		case ID_USEYOURBLOCK:
@@ -90,8 +96,64 @@ void CBottomView::OnContextMenu(CPoint point, int nLine)
 				{
 					m_arDiffLines->SetAt(i, m_pwndRight->m_arDiffLines->GetAt(i));
 					m_arLineStates->SetAt(i, m_pwndRight->m_arLineStates->GetAt(i));
-					SetModified();
 				} // for (int i=m_nSelBlockStart; i<=m_nSelBlockEnd; i++) 
+				SetModified();
+			}
+			break;
+		case ID_USEYOURANDTHEIRBLOCK:
+			{
+				for (int i=m_nSelBlockStart; i<=m_nSelBlockEnd; i++)
+				{
+					m_arDiffLines->SetAt(i, m_pwndRight->m_arDiffLines->GetAt(i));
+					m_pwndRight->m_arLineStates->SetAt(i, CDiffData::DIFFSTATE_YOURSADDED);
+					m_arLineStates->SetAt(i, m_pwndRight->m_arLineStates->GetAt(i));
+				} // for (int i=m_nSelBlockStart; i<=m_nSelBlockEnd; i++) 
+				
+				// your block is done, now insert their block
+				int index = m_nSelBlockEnd+1;
+				for (int i=m_nSelBlockStart; i<=m_nSelBlockEnd; i++)
+				{
+					m_arDiffLines->InsertAt(index, m_pwndLeft->m_arDiffLines->GetAt(i));
+					m_pwndLeft->m_arLineStates->SetAt(i, CDiffData::DIFFSTATE_THEIRSADDED);
+					m_arLineStates->InsertAt(index++, m_pwndLeft->m_arLineStates->GetAt(i));
+				} // for (int i=m_nSelBlockStart; i<=m_nSelBlockEnd; i++) 
+
+				// now insert an empty block in both yours and theirs
+				m_pwndLeft->m_arDiffLines->InsertAt(m_nSelBlockStart, _T(""), m_nSelBlockEnd-m_nSelBlockStart+1);
+				m_pwndLeft->m_arLineStates->InsertAt(m_nSelBlockStart, CDiffData::DIFFSTATE_EMPTY, m_nSelBlockEnd-m_nSelBlockStart+1);
+				m_pwndRight->m_arDiffLines->InsertAt(m_nSelBlockEnd+1, _T(""), m_nSelBlockEnd-m_nSelBlockStart+1);
+				m_pwndRight->m_arLineStates->InsertAt(m_nSelBlockEnd+1, CDiffData::DIFFSTATE_EMPTY, m_nSelBlockEnd-m_nSelBlockStart+1);
+				SetModified();
+				m_pwndLeft->SetModified();
+				m_pwndRight->SetModified();
+			}
+			break;
+		case ID_USETHEIRANDYOURBLOCK:
+			{
+				for (int i=m_nSelBlockStart; i<=m_nSelBlockEnd; i++)
+				{
+					m_arDiffLines->SetAt(i, m_pwndLeft->m_arDiffLines->GetAt(i));
+					m_pwndLeft->m_arLineStates->SetAt(i, CDiffData::DIFFSTATE_THEIRSADDED);
+					m_arLineStates->SetAt(i, m_pwndLeft->m_arLineStates->GetAt(i));
+				} // for (int i=m_nSelBlockStart; i<=m_nSelBlockEnd; i++) 
+				
+				// your block is done, now insert their block
+				int index = m_nSelBlockEnd+1;
+				for (int i=m_nSelBlockStart; i<=m_nSelBlockEnd; i++)
+				{
+					m_arDiffLines->InsertAt(index, m_pwndRight->m_arDiffLines->GetAt(i));
+					m_pwndRight->m_arLineStates->SetAt(i, CDiffData::DIFFSTATE_YOURSADDED);
+					m_arLineStates->InsertAt(index++, m_pwndRight->m_arLineStates->GetAt(i));
+				} // for (int i=m_nSelBlockStart; i<=m_nSelBlockEnd; i++) 
+
+				// now insert an empty block in both yours and theirs
+				m_pwndRight->m_arDiffLines->InsertAt(m_nSelBlockStart, _T(""), m_nSelBlockEnd-m_nSelBlockStart+1);
+				m_pwndRight->m_arLineStates->InsertAt(m_nSelBlockStart, CDiffData::DIFFSTATE_EMPTY, m_nSelBlockEnd-m_nSelBlockStart+1);
+				m_pwndLeft->m_arDiffLines->InsertAt(m_nSelBlockEnd+1, _T(""), m_nSelBlockEnd-m_nSelBlockStart+1);
+				m_pwndLeft->m_arLineStates->InsertAt(m_nSelBlockEnd+1, CDiffData::DIFFSTATE_EMPTY, m_nSelBlockEnd-m_nSelBlockStart+1);
+				SetModified();
+				m_pwndLeft->SetModified();
+				m_pwndRight->SetModified();
 			}
 			break;
 		} // switch (cmd) 
